Higlight urgent workspaces with red on white

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -352,7 +352,7 @@ bar {
         active_workspace   #D0D0D0 #E9E9F2 #0F1019
         inactive_workspace #D0D0D0 #E9E9F2 #0F1019
         binding_mode       #D83441 #F5F5F9 #D83441
-        urgent_workspace   #D83441 #F5F5F9 #D83441
+        urgent_workspace   #D83441 #D83441 #F5F5F9
     }
 }
 
