--- a/.config/i3/config
+++ b/.config/i3/config
@@ -256,18 +256,19 @@ exec --no-startup-id xfce4-power-manager
 exec --no-startup-id pamac-tray
 exec --no-startup-id clipit
 # exec --no-startup-id blueman-applet
-exec --no-startup-id /home/hoagie/.config/i3/start_conky.sh
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 
 # Autostart custom
+exec --no-startup-id /home/hoagie/.config/i3/start_conky.sh
+exec --no-startup-id exec /home/hoagie/.config/i3/wacom_default.sh
+exec --no-startup-id exec /home/hoagie/.config/i3/trackpointconfig.sh
 exec --no-startup-id dunst
 exec --no-startup-id emacs --daemon
-exec --no-startup-id /home/hoagie/.config/i3/tabletmode.py
-exec --no-startup-id exec /home/hoagie/.config/i3/autorotate.sh
-exec --no-startup-id exec /home/hoagie/.config/i3/wacomconfig.sh
-exec --no-startup-id exec /home/hoagie/.config/i3/trackpointconfig.sh
 exec --no-startup-id onboard
+# https://github.com/witty91/gester handles touch gestures. It's used
+# to start the "touch bar" (xfce4-panel) and handle screen rotation
+exec --no-startup-id exec gester &
 
 exec --no-startup-id flameshot
 bindsym $mod+Shift+s exec --no-startup-id flameshot gui
@@ -293,6 +294,9 @@ bindsym $mod+o exec --no-startup-id /home/hoagie/.config/i3/audio_output.py
 # I used this binding to re-apply xmodmap, but changing keyb layouts
 # has a similar effect, so why not recycle the shortcut:
 bindsym $mod+i exec --no-startup-id /home/hoagie/.config/i3/keyboardlayout.py
+
+bindsym $mod+u exec --no-startup-id /home/hoagie/.config/i3/wacom_default.sh
+bindsym $mod+Shift+u exec --no-startup-id /home/hoagie/.config/i3/wacom_scumm.sh
 
 bindsym $mod+n exec --no-startup-id dunstctl context
 bindsym $mod+Shift+n exec --no-startup-id dunstctl history-pop
