--- a/.config/i3/config
+++ b/.config/i3/config
@@ -263,6 +263,7 @@ exec_always --no-startup-id fix_xcursor
 exec --no-startup-id /home/hoagie/.config/i3/start_conky.sh
 exec --no-startup-id exec /home/hoagie/.config/i3/wacom_default.sh
 exec --no-startup-id exec /home/hoagie/.config/i3/trackpointconfig.sh
+exec --no-startup-id /home/hoagie/.config/i3/keyboard/keyboard_setup.sh
 exec --no-startup-id dunst
 exec --no-startup-id emacs --daemon
 exec --no-startup-id onboard
@@ -291,9 +292,6 @@ mode "$mode_monitor" {
 }
 # change the audio output via keyboard
 bindsym $mod+o exec --no-startup-id /home/hoagie/.config/i3/audio_output.py
-# I used this binding to re-apply xmodmap, but changing keyb layouts
-# has a similar effect, so why not recycle the shortcut:
-bindsym $mod+i exec --no-startup-id /home/hoagie/.config/i3/keyboardlayout.py
 
 bindsym $mod+u exec --no-startup-id /home/hoagie/.config/i3/wacom_default.sh
 bindsym $mod+Shift+u exec --no-startup-id /home/hoagie/.config/i3/wacom_scumm.sh
