Add more values to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
-.config/emacs/custom.el*
 .config/emacs/auto-save/*
+.config/emacs/backups/*
+.config/emacs/custom.el
+.config/emacs/diary*
+.config/emacs/ecompleterc
 .config/emacs/eln-cache/*
 .config/emacs/elpa/*
-.config/emacs/url/*
-.config/emacs/backups/*
-.config/emacs/projects
-.config/emacs/tramp
 .config/emacs/history
-.config/emacs/diary*
+.config/emacs/multisession/*
 .config/emacs/network-security.data
-.config/emacs/server/
+.config/emacs/projects
+.config/emacs/server/*
+.config/emacs/tramp
+.config/emacs/transient/*
+.config/emacs/url/*
