--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .config/emacs/auto-save/*
+.config/emacs/auto-save/*
 .config/emacs/backups/*
 .config/emacs/custom.el
 .config/emacs/diary*
@@ -14,3 +15,4 @@
 .config/emacs/transient/*
 .config/emacs/url/*
 .config/emacs/newsticker/*
+.config/emacs/org-persist/*
