Ignore .config/emacs/machine-config.el

--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,6 @@
 .config/emacs/url/*
 .config/emacs/newsticker/*
 .config/emacs/org-persist/*
+.config/emacs/machine-config.el
 .config/gnus/.newsrc.eld
 .config/gnus/ecomplete
